[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "dev-dependency-usage-analyzer"
version = "0.1.0"
description = "A CLI tool that scans codebases to detect unused and orphaned dependencies to streamline project cleanup."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["python", "click", "ast", "importlib_metadata"]
dependencies = []

[project.urls]
Homepage = "https://github.com/{GITHUB_USERNAME}/dev-dependency-usage-analyzer"
